methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:8: error: type mismatch;
 found   : java.awt.Color
 required: String
    Couleur = getCouleurSol()
                           ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
      avance()
            ^SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^